# family-planner

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml  railway.toml
agent/: brain.py  enrichment.py  tools.py
bot/: commands.py  handlers.py
config/: env.py  opportunity_scout.yaml  opportunity_sources.yaml  rules.yaml
gcal/: auth.py  client.py
opportunity/: __init__.py  models.py  preferences.py  service.py  source_registry.py  sources.py
scheduler/: jobs.py
scripts/: test_briefing.py  test_calendar.py  test_reminder.py
storage/: __init__.py  lists.py  memory.py  price_research.py  proactivity.py  shopping_list.py
tests/: test_behavior.py  test_opportunity_scout.py  test_price_research.py
